# pre-pip

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  python-test-bash.yml  python-test-zsh.yml
hooks/: __init__.py  autoupdate.py  demo_hook.py  test_hook.py
pre_pip/: __init__.py  cli.py  install.py  main.py  uninstall.py
tests/: test_hooks.py  test_hooks_remote.py  test_install.py  test_meta.py
