[tool.poetry]
name = "pre-pip"
version = "0.1.0"
description = ""
authors = ["Ratul Maharaj <ratulmaharaj@looped.co.za>"]
readme = "README.md"
packages = [{ include = "pre_pip" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-pip = "pre_pip.cli:cli"
