[tool.poetry]
name = "pre-pip"
version = "0.1.2"
description = "Run some python before your pip commands."
authors = ["Ratul Maharaj <ratulmaharaj@looped.co.za>"]
readme = "README.md"
packages = [{ include = "pre_pip" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-pip = "pre_pip.cli:cli"
